[package]
name = "nadir"
resolver = "2"
version = "0.0.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_embedded_assets = "0.9.1"
bevy_rapier3d = "0.23.0"
leafwing-input-manager = "0.11.2"

[dependencies.bevy]
version = "0.12.1"

[dev-dependencies.bevy]
version = "0.12.1"
features = ["dynamic_linking"]
